@@ -1,6 +1,7 @@
 ﻿===== Smarty 3.1-DEV  =====
 17/06/2011
 - bugfix/change use $_smarty->loadPlugin() when loading nested depending plugins via loadPlugin
+- bugfix {include ... inline} within {block}...{/block} did fail
 
 16/06/2011
 - bugfix do not overwrite '$smarty' template variable when {include ... scope=parent} is called
